Fix asset spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,22 +90,20 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
-  padding: 24px;
+  padding: 0;
   margin: 18px;
   background: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
   margin-top: 0;
   margin-bottom: 32px;
-  transform: translateY(-68px);
-  padding-top: 0;
-  padding-left: 0;
-  padding-right: 0; }
+  transform: translateY(-72px); }
 
 .asset__header {
   display: flex;
   align-items: center;
-  padding: 8px;
-  padding-left: 24px;
+  padding: 10px;
+  padding-left: 32px;
+  padding-top: 0;
   width: 100%;
   border-bottom: 1px solid #E3E9EB; }
 
@@ -118,8 +116,13 @@ body {
   font-size: 22px;
   padding-left: 12px; }
 
+.asset__values {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly; }
+
 .asset__value {
-  padding-left: 24px;
+  padding-left: 32px;
   color: rgba(0, 0, 0, 0.75); }
 
 .header {
